# Stasyan

./: CMakeLists.txt  README.md  main.cxx  scanner.hxx  scanner.ll
examples/: 001.sts  comment.pcl  comment.sts  default.sts  empty_comm.sts
examples/errors/: comment_error.sts  comment_error2.sts  lex_error.sts  strange_string.sts
